# ota_gw

./: CMakeLists.txt  README.md  compilelog  partitions.csv  sdkconfig  sdkconfig.old
app/client_register/: CMakeLists.txt  client_register.c  client_register.h
app/ledapp/: CMakeLists.txt
app/ota_dispatch/: CMakeLists.txt  ota_dispatch.c  ota_dispatch.h
app/otaapp/: CMakeLists.txt  otaapp.c  otaapp.h
components/camera/: CMakeLists.txt  camera.c  camera.h
components/common_gpio/: CMakeLists.txt  common_gpio.c  common_gpio.h  readme.md
components/jpeg/: CMakeLists.txt  jpeg.c  jpeg.h  tiny_jpeg.c  tiny_jpeg.h
components/sccb/: CMakeLists.txt  camera_reg.h  sccb.c  sccb.h
components/spi/: README.md  spi.c  spi.h
handler/: README.md
handler/init/: CMakeLists.txt  init.c  init.h
handler/motor_handler/: CMakeLists.txt  motor_handler.c  motor_handler.h
handler/motor_pwm/: CMakeLists.txt  motor_pwm.c  motor_pwm.h
handler/ota_handler/: CMakeLists.txt  ota_handler.c  ota_handler.h  server_cert.pem
handler/ov7670_handler/: CMakeLists.txt  ov7670_handler.c  ov7670_handler.h
main/: CMakeLists.txt  README.md  debugresult.md  idf_component.yml  main.c  server_cert.pem
protocol/: README.md
protocol/control_mgmt/: CMakeLists.txt  control_mgmt.c  control_mgmt.h
protocol/tcp_server/: CMakeLists.txt  tcp_server.c  tcp_server.h
protocol/webserver/: CMakeLists.txt  readme.md  webserver.c  webserver.h  webserver_base.c  webserver_base.h  webserver_camera.c  webserver_camera.h  webserver_motor.c  webserver_motor.h  webserver_otagw.c  webserver_otagw.h
protocol/wifi_ap/: CMakeLists.txt  (+3 more)
spiffs/: README.md  index.html  manifest.json  test.html
(+10 files in other folders)
